Refactor EmailService to manage MessageOptions